--- a/package.json
+++ b/package.json
@@ -1,38 +1,26 @@
 {
-  "name": "react-pokedex",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "axios": "^1.3.2",
-    "dotenv": "^16.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "pokedex-app",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server/server.js",
+    "scripts": {
+        "start": "node server/server.js --ignore client",
+        "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
+        "install": "cd server && npm i && cd ../client && npm i",
+        "seed": "cd server && npm run seed",
+        "build": "cd client && vite build"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@vitejs/plugin-react": "^3.1.0",
+        "apollo-server-express": "^3.6.2",
+        "dotenv": "^10.0.0",
+        "if-env": "^1.0.4",
+        "json-web-token": "^3.2.0"
+    },
+    "devDependencies": {
+        "concurrently": "^5.3.0",
+        "vite": "^4.1.4"
+    }
 }
