--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "vite-react-starter",
   "private": true,
   "version": "0.0.0",
+  "homepage": "http://localhost:3000/",
   "proxy": "http://localhost:3001",
   "type": "module",
   "scripts": {
